# dump-chat-templates

./: Cargo.toml  flake.nix  shell.nix
src/: main.rs
